kubernetes/yaml/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80 # 这个是service对外暴露的端口
    targetPort: 80 # 这里是pod对外暴露的端口
    nodePort: 30081
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
            access_log /dev/stdout ;
    nginx.ingress.kubernetes.io/ssl-redirect: "false" #关闭SSL跳转

spec:
  ingressClassName: internet
  tls:
  - hosts:
    - test.i.com
    secretName: test.i.com
  rules:
  - host: test.i.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
